--- a/app.css
+++ b/app.css
@@ -1,30 +1,45 @@
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body{
-    width: 100%;
-    min-height: 100vh;
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
+textarea{
+    resize: none;
+}
+
+h1,h2,h3{
+    text-align: center;
+}
+
+.form-control{
     font-size: 20px;
+}
+
+.expense-content{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin: 50px;
+    gap: 20px;
     color: white;
+    font-size: 20px;
 }
 
-.manager{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-}
-
-.manager section{
-    border: 5px solid black;
+.expense-form{
     width: 600px;
-    height: 500px;
-    background-color: indigo;
+    display: flex;
+    flex-direction: column;
+    background-color: #3f51b5;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+
+.expense-information{
+    background-color: #3f51b5;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.totalPrice{
+    font-size: 25px;
+    font-weight: bold;
 }
